--- a/src/base_templates/qstockapp/base.html
+++ b/src/base_templates/qstockapp/base.html
@@ -3,6 +3,8 @@
 <!DOCTYPE html>
 <html lang="fr">
     <head>
+        {% load pwa %}
+        {% progressive_web_app_meta %}
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <link rel="stylesheet" href="{% static 'css/qstockapp/reset.css' %}">
