All views redering got test

--- a/src/base_templates/qstockapp/base.html
+++ b/src/base_templates/qstockapp/base.html
@@ -44,7 +44,7 @@
                         <li><a href="{% url 'products:product_list' %}">Produits</a></li>
                         <li><a href="{% url 'orders:order_list' %}">Commandes</a></li>
                         <li><a href="{% url 'sales:sale_list' %}">Ventes</a></li> 
-                        <li><a href="{% url 'settings:settings_update' %}">Paramètres</a></li> 
+                        <li><a href="{% url 'settings:setting_update' %}">Paramètres</a></li> 
                     </ul>
                 </div>
             </div>
