store theme, server messages, bugs fixed

--- a/src/base_templates/qstockapp/base.html
+++ b/src/base_templates/qstockapp/base.html
@@ -9,6 +9,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <link rel="stylesheet" href="{% static 'css/qstockapp/reset.css' %}">
         <link rel="stylesheet" href="{% static 'css/qstockapp/base.css' %}">
+        <script src="{% static 'js/qstockapp/theme.js' %}" defer></script>
         {% block head %}
         <title>{% if company_name %} {{ company_name }} {% else %} QuickStock {% endif %}</title>
         {% endblock %}
@@ -33,6 +34,7 @@
         </style>
     </head>
     <body>
+        <div class="theme_color" style="display: none;">{{ current_store.accent_color_code }}</div>
         <main>
             <div class="sidebar">
                 <div class="app_name">
@@ -73,8 +75,13 @@
                                     </a>
                                 </span>
                         </div>
-                        <span>
+                        <span title="Profile utilisateur">
                             <a class="user" href="{% url 'accounts:details' %}">
+                                <span>
+                                    <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                        <path fill-rule="evenodd" clip-rule="evenodd" d="M8 7C8 5.93913 8.42143 4.92172 9.17157 4.17157C9.92172 3.42143 10.9391 3 12 3C13.0609 3 14.0783 3.42143 14.8284 4.17157C15.5786 4.92172 16 5.93913 16 7C16 8.06087 15.5786 9.07828 14.8284 9.82843C14.0783 10.5786 13.0609 11 12 11C10.9391 11 9.92172 10.5786 9.17157 9.82843C8.42143 9.07828 8 8.06087 8 7ZM8 13C6.67392 13 5.40215 13.5268 4.46447 14.4645C3.52678 15.4021 3 16.6739 3 18C3 18.7956 3.31607 19.5587 3.87868 20.1213C4.44129 20.6839 5.20435 21 6 21H18C18.7956 21 19.5587 20.6839 20.1213 20.1213C20.6839 19.5587 21 18.7956 21 18C21 16.6739 20.4732 15.4021 19.5355 14.4645C18.5979 13.5268 17.3261 13 16 13H8Z" fill="white"/>
+                                    </svg>
+                                </span>
                                 {% if user.fullname != None %}
                                     {{ user.fullname|title }}
                                 {% else %}
@@ -90,5 +97,13 @@
                 </div>
             </div>
         </main>
+        <div class="messages">
+            {% for message in messages %}
+                <p {% if message.tags %} class="{{ message.tags }}"{% endif %} > {{ message }}</p>
+            {% endfor %}
+            {% block extra_messages %}
+            {% endblock %}
+        </div>
+
     </body>
 </html>
