Pin code feature, hide dashbord stats and more edits ...

--- a/src/base_templates/qstockapp/base.html
+++ b/src/base_templates/qstockapp/base.html
@@ -70,6 +70,17 @@
                     </div>
                     <div>
                         <div class="current-store">
+                            <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                <g clip-path="url(#clip0_98_2)">
+                                <path d="M23.595 9.89911L12.7922 0.2985C12.5732 0.106105 12.2916 0 12 0C11.7084 0 11.4268 0.106105 11.2078 0.2985L0.405024 9.89911C0.22142 10.0615 0.0919451 10.2762 0.0340079 10.5143C-0.0239292 10.7525 -0.00755099 11.0026 0.0809408 11.2312C0.167985 11.4567 0.321128 11.6507 0.520313 11.7878C0.719497 11.9248 0.955436 11.9985 1.19723 11.9992H2.39754V22.7999C2.39754 23.1182 2.524 23.4234 2.7491 23.6485C2.9742 23.8736 3.2795 24 3.59784 24H20.4022C20.7205 24 21.0258 23.8736 21.2509 23.6485C21.476 23.4234 21.6025 23.1182 21.6025 22.7999V11.9992H22.8028C23.0446 11.9985 23.2805 11.9248 23.4797 11.7878C23.6789 11.6507 23.832 11.4567 23.9191 11.2312C24.0076 11.0026 24.0239 10.7525 23.966 10.5143C23.9081 10.2762 23.7786 10.0615 23.595 9.89911ZM13.2003 21.5998H10.7997V17.9996C10.7997 17.6813 10.9262 17.3761 11.1513 17.151C11.3764 16.926 11.6817 16.7995 12 16.7995C12.3183 16.7995 12.6236 16.926 12.8487 17.151C13.0738 17.3761 13.2003 17.6813 13.2003 17.9996V21.5998ZM19.2018 21.5998H15.6009V17.9996C15.6009 17.0448 15.2215 16.129 14.5462 15.4539C13.8709 14.7787 12.955 14.3994 12 14.3994C11.045 14.3994 10.1291 14.7787 9.45376 15.4539C8.77846 16.129 8.39908 17.0448 8.39908 17.9996V21.5998H4.79815V11.9992H19.2018V21.5998ZM4.35404 9.59909L12 2.80666L19.646 9.59909H4.35404Z" fill="black"/>
+                                </g>
+                                <defs>
+                                <clipPath id="clip0_98_2">
+                                <rect width="24" height="24" fill="white"/>
+                                </clipPath>
+                                </defs>
+                                </svg>
+                                
                             <span class="current">{{ current_store }}</span>
                             <a href="{% url 'stores:store_list' %}" title="Changer de magazin"></a>
                         </div>
