User preference, and some edits...

--- a/src/base_templates/qstockapp/base.html
+++ b/src/base_templates/qstockapp/base.html
@@ -51,6 +51,7 @@
                             <li><a href="{% url 'products:product_list' %}">Produits</a></li>
                             <li><a href="{% url 'orders:order_list' %}">Commandes</a></li>
                             <li><a href="{% url 'sales:sale_list' %}">Ventes</a></li> 
+                            <!-- <li><a href="{% url 'pin_test_view' %}">Test pin code</a></li>  -->
                         </ul>
                     </div>
                     <div class="bottom">
@@ -122,6 +123,5 @@
             {% block extra_messages %}
             {% endblock %}
         </div>
-
     </body>
 </html>
