--- a/src/base_templates/qstockapp/base.html
+++ b/src/base_templates/qstockapp/base.html
@@ -1,4 +1,5 @@
 {% load static %}
+{% load template_permission %}  
 
 <!DOCTYPE html>
 <html lang="fr">
@@ -59,22 +60,29 @@
                                     Tableau de bord
                                 </a>
                             </li>
+                            {% if request.user|has_permission:"products.can_view_product" %}
                             <li>
                                 <a href="{% url 'products:product_list' %}">
                                     <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                                         <path d="M13.8535 3.14648C13.9472 3.24024 13.9999 3.3674 13.9999 3.49998C13.9999 3.63256 13.9472 3.75972 13.8535 3.85348L12.707 4.99998L13.8535 6.14648C13.9446 6.24078 13.995 6.36708 13.9938 6.49818C13.9927 6.62928 13.9401 6.75468 13.8474 6.84739C13.7547 6.94009 13.6293 6.99268 13.4982 6.99382C13.3671 6.99496 13.2408 6.94456 13.1465 6.85348L12 5.70698L10.8535 6.85348C10.807 6.8999 10.7519 6.93672 10.6912 6.96183C10.6305 6.98694 10.5655 6.99985 10.4998 6.99983C10.4341 6.99981 10.3691 6.98685 10.3085 6.96169C10.2478 6.93654 10.1927 6.89968 10.1462 6.85323C10.0998 6.80677 10.063 6.75163 10.0379 6.69095C10.0128 6.63026 9.99988 6.56523 9.9999 6.49955C9.99992 6.43388 10.0129 6.36885 10.038 6.30819C10.0632 6.24752 10.1 6.1924 10.1465 6.14598L11.293 4.99998L10.1465 3.85348C10.1001 3.80702 10.0633 3.75188 10.0381 3.6912C10.013 3.63051 10.0001 3.56548 10.0001 3.4998C10.0002 3.43413 10.0131 3.3691 10.0383 3.30844C10.0634 3.24777 10.1003 3.19265 10.1468 3.14623C10.1932 3.09981 10.2483 3.06299 10.309 3.03788C10.3697 3.01277 10.4348 2.99985 10.5004 2.99988C10.5661 2.9999 10.6311 3.01286 10.6918 3.03801C10.7525 3.06317 10.8076 3.10002 10.854 3.14648L12 4.29298L13.1465 3.14648C13.2403 3.05274 13.3674 3.00009 13.5 3.00009C13.6326 3.00009 13.7597 3.05274 13.8535 3.14648ZM9.599 16.364C9.93377 16.4755 10.2944 16.4833 10.6337 16.3862C10.9729 16.2891 11.2749 16.0917 11.5 15.82V21.0115L5.5 18.75V14.998L9.599 16.364Z" fill="black"/>
                                         <path fill-rule="evenodd" clip-rule="evenodd" d="M18.5 18.75L12.5 21.0115V15.82C12.7251 16.0917 13.0271 16.2891 13.3663 16.3862C13.7056 16.4833 14.0662 16.4755 14.401 16.364L18.5 14.998V18.75ZM16.658 17.7245C16.7838 17.6826 16.8879 17.5924 16.9472 17.4738C17.0066 17.3552 17.0164 17.2178 16.9745 17.092C16.9326 16.9661 16.8424 16.8621 16.7238 16.8027C16.6052 16.7434 16.4678 16.7336 16.342 16.7755L14.092 17.5255C13.9662 17.5674 13.8621 17.6576 13.8028 17.7762C13.7434 17.8948 13.7336 18.0321 13.7755 18.158C13.8174 18.2838 13.9076 18.3879 14.0262 18.4472C14.1448 18.5066 14.2822 18.5164 14.408 18.4745L16.658 17.7245ZM12.1635 7.52749C12.0576 7.49084 11.9424 7.49084 11.8365 7.52749L5.3375 9.77749L5.326 9.78099C5.23862 9.81349 5.16207 9.86978 5.105 9.94349L3.11 12.4375C3.05961 12.5004 3.02516 12.5745 3.00959 12.6535C2.99402 12.7326 2.99779 12.8143 3.02057 12.8915C3.04336 12.9688 3.08448 13.0395 3.14045 13.0974C3.19641 13.1554 3.26556 13.199 3.342 13.2245L10.092 15.4745C10.1942 15.5085 10.3047 15.5085 10.4069 15.4746C10.5092 15.4408 10.5978 15.3748 10.6595 15.2865L12 13.3715L13.34 15.2865C13.4017 15.3749 13.4904 15.4409 13.5928 15.4748C13.6951 15.5087 13.8057 15.5086 13.908 15.4745L20.658 13.2245C20.7345 13.1991 20.8037 13.1555 20.8597 13.0976C20.9157 13.0396 20.9569 12.969 20.9797 12.8917C21.0026 12.8144 21.0064 12.7327 20.9908 12.6536C20.9753 12.5746 20.9409 12.5004 20.8905 12.4375L18.8955 9.94349C18.8357 9.86646 18.7547 9.80858 18.6625 9.77699L12.1635 7.52749ZM12 11.971L16.9715 10.25L12 8.52899L7.0285 10.25L12 11.971Z" fill="black"/>
                                     </svg>
-                                    Produits & Stock</a></li>
+                                    Produits & Stock
+                                </a>
+                            </li>
+                            {% endif %}
+                            {% if request.user|has_permission:"orders.can_view_order" %}
                             <li>
-                                
                                 <a href="{% url 'orders:order_list' %}">
                                     <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                                         <path d="M22 13.126C20.8858 12.3251 19.5306 11.9303 18.1606 12.0074C16.7905 12.0846 15.4883 12.6291 14.471 13.5501C13.4537 14.4711 12.7829 15.7129 12.5704 17.0686C12.3578 18.4243 12.6164 19.8119 13.303 21H3C2.73478 21 2.48043 20.8946 2.29289 20.7071C2.10536 20.5196 2 20.2652 2 20V4C2 3.73478 2.10536 3.48043 2.29289 3.29289C2.48043 3.10536 2.73478 3 3 3H10.414L12.414 5H21C21.2652 5 21.5196 5.10536 21.7071 5.29289C21.8946 5.48043 22 5.73478 22 6V13.126ZM20 17H23V19H20V22.5L15 18L20 13.5V17Z" fill="black"/>
                                     </svg>
-                                    Commandes</a></li>
+                                    Commandes
+                                </a>
+                            </li>
+                            {% endif %}
+                            {% if request.user|has_permission:"sales.can_view_sale" %}
                             <li>
-                                
                                 <a href="{% url 'sales:sale_list' %}">
                                     <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                                         <mask id="mask0_147_21" style="mask-type:luminance" maskUnits="userSpaceOnUse" x="2" y="0" width="20" height="24">
@@ -85,12 +93,16 @@
                                         <path d="M0 0H24V24H0V0Z" fill="black"/>
                                         </g>
                                     </svg>
-                                    Ventes</a></li> 
+                                    Ventes
+                                </a>
+                            </li> 
+                            {% endif %}
                             <!-- <li><a href="{% url 'pin_test_view' %}">Test pin code</a></li>  -->
                         </ul>
                     </div>
                     <div class="bottom">
                         <ul>
+                            {% if request.user|has_permission:"accounts.can_view_user" %}
                             <li>
                                 <a href="{% url 'accounts:user_list' %}">
                                     <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -99,6 +111,8 @@
                                     Administration                                    
                                 </a>
                             </li>
+                            {% endif %}
+                            {% if request.user|has_permission:"debts.can_view_debt" %}
                             <li>
                                 <a href="{% url 'debts:debt_list' %}" class="debt-link">
                                     <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -107,6 +121,8 @@
                                     Gérer les impayés
                                 </a>
                             </li> 
+                            {% endif %}
+                            {% if request.user|has_permission:"settings.can_view_setting" %}
                             <li>
                                 <a href="{% url 'settings:setting_update' %}">
                                     <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -116,6 +132,7 @@
                                     Paramètres
                                 </a>
                             </li> 
+                            {% endif %}
                             <li>
                                 <a href="{% url 'accounts:logout' %}">
                                     <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
